[gd_scene load_steps=13 format=2]

[ext_resource path="res://Sprites/Player/posterboy.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Pause.gd" type="Script" id=2]
[ext_resource path="res://NiceFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Sprites/Player/AllMagicianSkills9.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Pause/Resume.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Player/AllMagicianSkills2.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Pause/ResumeSelected.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Pause/Quit.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Player/AllMagicianSkills5.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Player/AllMagicianSkills10.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Pause/QuitSelected.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Player/Ability4-Shield.png" type="Texture" id=12]

[node name="Pause" type="Control"]
pause_mode = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 4.0
margin_top = 1.5946
margin_right = 764.0
margin_bottom = 360.595
color = Color( 1, 1, 1, 0.721569 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 214.0
margin_top = 16.0
margin_right = 730.0
margin_bottom = 89.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "The Magician wields the ability to convert mana into magical energy.
In this, he is able to manipulate the magicial energy to form offensive attacks 
or use the energy to defend himself.
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 205.0
margin_top = 89.0
margin_right = 447.0
margin_bottom = 166.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "{E} Basic Blast - A projectile shard of energy
[Damage: 1]           [Speed: Fast]
[CD: .4 seconds]       [Cost: 2]

"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
margin_left = 515.0
margin_top = 88.0
margin_right = 756.0
margin_bottom = 181.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "{W} Spinning Blast - A rotating ball of energy.
                      passes through enemies
[Damage: 2]               [Speed: Slow]
[CD: 4 seconds]           [Cost: 5]

"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label6" type="Label" parent="."]
margin_left = 510.243
margin_top = 184.326
margin_right = 754.243
margin_bottom = 277.326
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "{D} Shield - A wall of Energy absorbing
             incomming damage
[Damage: 0]               [Speed: Fast]
[CD: 3 seconds]           [Cost: 3]

"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="."]
margin_left = 206.0
margin_top = 187.0
margin_right = 431.0
margin_bottom = 280.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "{R} ULTIMATE BLAST - A LARGE fast energy 
blast that passes through terain 
[Damage: 3]           [Speed: Fast]
[CD: 8 seconds]       [Cost: 7]

"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="."]
margin_left = 81.588
margin_top = 289.92
margin_right = 318.588
margin_bottom = 366.92
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "{Q} Dash - Consumes mana to dash foreward
[Damage: 0]           [Speed: Fast]
[CD: .2 seconds]       [Cost: 2]

"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 628.0
margin_top = 283.0
margin_right = 738.0
margin_bottom = 349.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AllMagicianSkills10" type="Sprite" parent="."]
position = Vector2( 176, 113 )
scale = Vector2( 2, 2 )
texture = ExtResource( 10 )

[node name="AllMagicianSkills5" type="Sprite" parent="."]
position = Vector2( 174, 211 )
scale = Vector2( 2, 2 )
texture = ExtResource( 9 )

[node name="AllMagicianSkills2" type="Sprite" parent="."]
position = Vector2( 47.561, 314.137 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )

[node name="AllMagicianSkills9" type="Sprite" parent="."]
position = Vector2( 483, 115 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="Ability4-Shield" type="Sprite" parent="."]
position = Vector2( 482.345, 214.493 )
scale = Vector2( 2, 2 )
texture = ExtResource( 12 )

[node name="Menu" type="HBoxContainer" parent="."]
margin_left = 339.0
margin_top = 298.0
margin_right = 763.0
margin_bottom = 360.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" type="TextureButton" parent="Menu"]
margin_right = 245.0
margin_bottom = 62.0
texture_normal = ExtResource( 5 )
texture_focused = ExtResource( 7 )

[node name="QuitButton" type="TextureButton" parent="Menu"]
margin_left = 249.0
margin_right = 449.0
margin_bottom = 62.0
texture_normal = ExtResource( 8 )
texture_focused = ExtResource( 11 )

[node name="posterboy" type="Sprite" parent="."]
position = Vector2( 74.8458, 112.088 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )
[connection signal="pressed" from="Menu/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="Menu/QuitButton" to="." method="_on_QuitButton_pressed"]
